...
            "state": "translated",
            "value": "数量を減らす"
          }
        }
      }
    },
    "Delete": {
      "comment": "A button to delete an item.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
...
            "state": "translated",
            "value": "編集"
          }
        }
      }
    },
    "Edit Item": {
      "comment": "The title of the sheet used to edit details of a stock item.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
...
            "state": "translated",
            "value": "名前"
          }
        }
      }
    },
    "New Item": {
      "comment": "The title of the sheet used to create a new stock item.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
...
            "state": "translated",
            "value": "在庫数量"
          }
        }
      }
    },
    "Receipt": {
      "comment": "A label for a receipt.",
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Reçu"
...
            "state": "translated",
            "value": "レシート詳細"
          }
        }
      }
    },
    "Receipts": {
      "comment": "A tab label for the receipts view.",
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Reçus"
...
            "state": "translated",
            "value": "米"
          }
        }
      }
    },
    "Save": {
      "comment": "The text of the \"Save\" button in the sheet.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
...
            "state": "translated",
            "value": "保存"
          }
        }
      }
    },
    "Save Receipt": {
      "comment": "A button to save a receipt.",
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Enregistrer le reçu"
...
            "state": "translated",
            "value": "店舗名"
          }
        }
      }
    },
    "Shopping": {
      "comment": "A tab label for the shopping list view.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
...
            "state": "translated",
            "value": "サインアップ"
          }
        }
      }
    },
    "Stock": {
      "comment": "The label for the tab that lists the stock of items.",
      "isCommentAutoGenerated": true,
      "localizations": {
        "fr": {
          "stringUnit": {
            "state": "translated",
...
